# SJMCL

./: .editorconfig  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.EXTRA  PKGBUILD  README.md  SECURITY.md  dev insights.mc  eslint.config.mjs  install.sh  next-i18next.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  snapcraft.yaml  tsconfig.json
.github/: copilot-instructions.md  (+1 more)
cli/: Cargo.toml  README.md  rustfmt.toml
cli/src/: main.rs
src-tauri/: Cargo.toml  Info.plist  build.rs  rustfmt.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/assets/db/: mod_data.csv
src-tauri/assets/game/: natives.json  versions.txt
src-tauri/capabilities/: default.json  desktop.json  window.linux.json  window.windows.json
src-tauri/crates/sjmcl-account/: Cargo.toml
src-tauri/crates/sjmcl-account/src/: lib.rs  models.rs
src-tauri/crates/sjmcl-account/src/helpers/: misc.rs  skin.rs
src-tauri/crates/sjmcl-discover/: Cargo.toml
src-tauri/crates/sjmcl-discover/src/helpers/: mc_news.rs
src-tauri/crates/sjmcl-extension/: Cargo.toml
src-tauri/crates/sjmcl-extension/src/: helper.rs  models.rs
src-tauri/crates/sjmcl-launcher-config/: Cargo.toml
src-tauri/crates/sjmcl-launcher-config/src/: models.rs
src-tauri/crates/sjmcl-macros/: Cargo.toml
src-tauri/crates/sjmcl-macros/src/: lib.rs  partial.rs  serialize.rs  serialize_skip_none.rs
src-tauri/crates/sjmcl-static/: Cargo.toml
src-tauri/crates/sjmcl-static/src/: envvar.rs  lib.rs
src-tauri/crates/sjmcl-types/: Cargo.toml
src-tauri/crates/sjmcl-types/src/: lib.rs  partial.rs  storage.rs
src-tauri/crates/sjmcl-utils/: Cargo.toml
src-tauri/crates/sjmcl-utils/src/: fs.rs  image.rs  lib.rs  logging.rs  portable.rs  sys_info.rs  web.rs  window.rs
src-tauri/infoplist/en.lproj/: InfoPlist.strings
src-tauri/infoplist/fr.lproj/: InfoPlist.strings
src-tauri/infoplist/ja.lproj/: InfoPlist.strings
src-tauri/infoplist/zh-Hans.lproj/: InfoPlist.strings
src-tauri/infoplist/zh-Hant.lproj/: InfoPlist.strings
src-tauri/libs/partial_derive/: Cargo.toml
src-tauri/libs/partial_derive/src/: lib.rs
src-tauri/libs/serialize_skip_none_derive/: Cargo.toml
src-tauri/libs/windows_native_titlebar/: Cargo.toml
src-tauri/libs/windows_native_titlebar/src/: lib.rs  windows_overlay_controls.js
src-tauri/src/: error.rs  launcher_config.rs  lib.rs  partial.rs  storage.rs
src-tauri/src/account/: commands.rs  constants.rs  helpers.rs  models.rs
src-tauri/src/account/helpers/: misc.rs  mod.rs  offline.rs  skin.rs  texture.rs
src-tauri/src/account/helpers/authlib_injector/: common.rs  info.rs  jar.rs  mod.rs  oauth.rs  password.rs  texture.rs
src-tauri/src/account/helpers/import/: hmcl.rs  legacy_hmcl.rs  misc.rs  mod.rs  model.rs  multimc.rs
src-tauri/src/account/helpers/microsoft/: constants.rs  friends.rs  mod.rs  models.rs  oauth.rs  texture.rs
src-tauri/src/account/helpers/oauth/: mod.rs
src-tauri/src/account/helpers/offline/: login.rs  mod.rs  yggdrasil_server.rs
src-tauri/src/ai/: commands.rs  models.rs
src-tauri/src/auth_server/: commands.rs  helpers.rs  models.rs
src-tauri/src/discover/: commands.rs  models.rs
src-tauri/src/discover/helpers/: mc_news.rs  mod.rs
src-tauri/src/extension/: commands.rs  helper.rs  mod.rs  models.rs
src-tauri/src/instance/: commands.rs  constants.rs  mod.rs  models.rs
src-tauri/src/instance/export/: common.rs  mcbbs.rs  mod.rs  modrinth.rs  multimc.rs
src-tauri/src/instance/helpers/: asset_index.rs  client.rs  client_jar.rs  client_json.rs  game_version.rs  instance_creator.rs  misc.rs  mod.rs  mod_loader.rs  options_txt.rs  player.rs  resourcepack.rs  server.rs  world.rs
src-tauri/src/instance/helpers/loader/: common.rs  fabric.rs  forge.rs  mod.rs  neoforge.rs  optifine.rs  quilt.rs
src-tauri/src/instance/helpers/modpack/: curseforge.rs  export.rs  import.rs  misc.rs  mod.rs  modrinth.rs  multimc.rs
src-tauri/src/instance/helpers/mods/: common.rs  fabric.rs  forge.rs  legacy_forge.rs  liteloader.rs  mod.rs  quilt.rs  translation.rs
src-tauri/src/instance/models/: misc.rs
src-tauri/src/instance/models/world/: base.rs  level.rs  player.rs
src-tauri/src/intelligence/: commands.rs  mod.rs  models.rs  providers.rs
src-tauri/src/intelligence/mcp_server/launcher/: macro.rs  mod.rs
src-tauri/src/launch/: commands.rs  constant.rs  models.rs
src-tauri/src/launch/helpers/: cmd_builder.rs  command_generator.rs  file_validator.rs  graphics_handler.rs  jre_selector.rs  log_parser.rs  misc.rs  mod.rs  process_monitor.rs
src-tauri/src/launch/helpers/game_version/: alpha.rs  beta.rs  misc.rs  mod.rs  release.rs  snapshot.rs
src-tauri/src/launcher_config/: commands.rs  helpers.rs  migrations.rs  models.rs
src-tauri/src/launcher_config/helpers/: graphics.rs  java.rs  java_auto_download.rs  memory.rs  misc.rs  mod.rs  updater.rs
src-tauri/src/mcp_server/: macro.rs  mod.rs  tools.rs
src-tauri/src/mcp_server/tools/: account.rs  debug.rs  instance.rs  launch.rs  launcher_config.rs  mod.rs  resource.rs
src-tauri/src/multiplayer/: command.rs  commands.rs  models.rs
src-tauri/src/multiplayer/helpers/: mod.rs  terracotta.rs
src-tauri/src/resource/: commands.rs  helpers.rs  models.rs
src-tauri/src/resource/helpers/: curseforge.rs  fabric_meta.rs  forge_meta.rs  misc.rs  mod.rs  mod_db.rs  modrinth.rs  neoforge_meta.rs  version_manifest.rs
src-tauri/src/resource/helpers/curseforge/: misc.rs  mod.rs
src-tauri/src/resource/helpers/loader_meta/: fabric.rs  forge.rs  mod.rs  neoforge.rs  optifine.rs  quilt.rs
src-tauri/src/resource/helpers/modrinth/: misc.rs  mod.rs
src-tauri/src/tasks/: background.rs  commands.rs  download.rs  events.rs  mod.rs  monitor.rs  reporter.rs
src-tauri/src/tasks/streams/: desc.rs  handle.rs  mod.rs  reporter.rs
src-tauri/src/utils/: commands.rs  exe_hash.rs  fs.rs  image.rs  logging.rs  mod.rs  nbt.rs  portable.rs  shell.rs  state_extractor.rs  string.rs  sys_info.rs  web.rs  window.rs
(+414 files in other folders)
