[package]
name = "SJMCL"
version.workspace = true
description = "A Minecraft launcher from SJMC"
authors = ["SJMCL Team"]
license = "GNU General Public License v3.0 (with additional terms)"
repository = "https://github.com/UNIkeEN/SJMCL"
edition.workspace = true
rust-version.workspace = true

[workspace]
members = ["crates/sjmcl-macros", "crates/sjmcl-types"]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.91.0"

[workspace.dependencies]
async-speed-limit = "0.4.2"
async-trait = "0.1.89"
axum = "0.8.6"
base64 = "0.22.1"
cafebabe = "0.8.1"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.40", features = ["serde"] }
config = "0.15.18"
csv = "1.3"
dotenvy = "0.15.7"
flume = { version = "0.11.1", features = ["async", "select"] }
font-loader = "0.11.0"
futures = "0.3.31"
glob = "0.3.2"
hex = "0.4.3"
image = { version = "0.25.5", default-features = false, features = [
  "serde",
  "png",
  "jpeg",
  "gif",
  "ico",
  "webp",
] }
java-properties = "2.0.0"
jsonwebtoken = { version = "10.3.0", default-features = false, features = [
  "rust_crypto",
] }
lazy_static = "1.5"
log = "0.4"
mc-server-status = "1.0.0"
murmur2 = "0.1"
native-dialog = "0.9.6"
pin-project = "1.1.8"
plist = "1"
proc-macro2 = "1"
quartz_nbt = { version = "0.2.9", features = ["serde"] }
quote = "1"
rand = "0.9.3"
regex = "1.11"
reqwest-middleware = "0.4.2"
reqwest-retry = "0.7.0"
rmcp = { version = "1.7.0", features = [
  "server",
  "transport-streamable-http-server",
] }
rsa = "0.9.10"
sanitize-filename = "0.6.0"
schemars = "1.0.4"
semver = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.12.0"
sjmcl-macros = { path = "./crates/sjmcl-macros" }
sjmcl-types = { path = "./crates/sjmcl-types" }
sha1 = "0.10.1"
sha2 = "0.10.9"
shlex = "1.3.0"
smart-default = "0.7.1"
structstruck = "0.4.1"
strum = "0.27.1"
strum_macros = "0.27.1"
syn = { version = "2", features = ["full"] }
sysinfo = "0.36.0"
systemstat = "0.2.3"
tauri = { version = "2.11.1", features = ["protocol-asset", "image-png"] }
tauri-build = { version = "2.6.1", features = [] }
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-decorum = "1.1.1"
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-http = { version = "2.5.9", features = ["json", "stream"] }
tauri-plugin-log = "2.8.0"
tauri-plugin-opener = "2.5.4"
tauri-plugin-os = "2.3.2"
tauri-plugin-process = "2.3.1"
tauri-plugin-single-instance = { version = "2.4.2", features = ["deep-link"] }
tauri-plugin-window-state = "2.4.1"
time = { version = "0.3", features = ["formatting", "local-offset"] }
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "fs",
  "io-util",
  "net",
  "sync",
  "time",
] }
tokio-util = { version = "0.7.13", features = ["compat"] }
toml = "0.8"
tower-http = { version = "0.6.6", features = ["cors"] }
url = "2.5.4"
urlencoding = "2.1.3"
uuid = { version = "1.11.0", features = [
  "v4",
  "v5",
  "fast-rng",
  "macro-diagnostics",
] }
walkdir = "2.5.0"
winapi = { version = "0.3", features = [
  "processthreadsapi",
  "winnt",
  "handleapi",
  "winuser",
  "windef",
] }
winreg = "0.55.0"
zip = { version = "2.3", default-features = false, features = [
  "deflate",
  "deflate64",
  "time",
] }

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
dotenvy.workspace = true
tauri-build.workspace = true

[features]
default = []
# Enables WebView DevTools in optimized builds. Off by default so production
# releases never ship an inspector; CI portable builds opt in via --features devtools.
devtools = ["tauri/devtools"]

[profile.release]
opt-level = 3   # as default
strip = true
lto = true
panic = "abort"

# Faster-to-compile profile for CI test builds. Inherits the release baseline
# (strip, panic=abort) but drops the costly optimizations (opt-level=3, lto).
# Used only by the test workflow via `tauri build -- --profile test-build`.
[profile.test-build]
inherits = "release"
opt-level = 1
lto = false

[patch.crates-io]
expat-sys = { git = "https://github.com/SJMC-dev/libexpat.git" }

[dependencies]
async-speed-limit.workspace = true
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
cafebabe.workspace = true
chacha20poly1305.workspace = true
chrono.workspace = true
config.workspace = true
csv.workspace = true
flume.workspace = true
font-loader.workspace = true
futures.workspace = true
glob.workspace = true
hex.workspace = true
image.workspace = true
java-properties.workspace = true
jsonwebtoken.workspace = true
lazy_static.workspace = true
log.workspace = true
mc-server-status.workspace = true
murmur2.workspace = true
native-dialog.workspace = true
pin-project.workspace = true
quartz_nbt.workspace = true
rand.workspace = true
regex.workspace = true
reqwest-middleware.workspace = true
reqwest-retry.workspace = true
rmcp.workspace = true
rsa.workspace = true
sanitize-filename.workspace = true
schemars.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
sjmcl-macros.workspace = true
sjmcl-types.workspace = true
sha1.workspace = true
sha2.workspace = true
shlex.workspace = true
smart-default.workspace = true
structstruck.workspace = true
strum.workspace = true
strum_macros.workspace = true
sysinfo.workspace = true
systemstat.workspace = true
tauri.workspace = true
tauri-plugin-clipboard-manager.workspace = true
tauri-plugin-deep-link.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-fs.workspace = true
tauri-plugin-http.workspace = true
tauri-plugin-log.workspace = true
tauri-plugin-opener.workspace = true
tauri-plugin-os.workspace = true
tauri-plugin-process.workspace = true
time.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tower-http.workspace = true
url.workspace = true
urlencoding.workspace = true
uuid.workspace = true
walkdir.workspace = true
zip.workspace = true

[target."cfg(windows)".dependencies]
tauri-plugin-decorum.workspace = true
winapi.workspace = true
winreg.workspace = true

[target."cfg(target_os = \"macos\")".dependencies]
plist.workspace = true

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance.workspace = true

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-window-state.workspace = true
