[package]
name = "sjmcl-types"
version = "1.0.0-beta.6"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
strum_macros.workspace = true
tokio.workspace = true
